...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="20dp"
        android:elevation="16dp"
        android:paddingTop="50dp">
        <ImageView
            android:id="@+id/imgArtistas"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/img_artistas_description"
            android:src="@mipmap/artists"
            android:scaleType="fitXY"/>
    </androidx.cardview.widget.CardView>
...
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAlbumes"
        app:cardCornerRadius="20dp">
        <ImageView
            android:id="@+id/imgAlbumes"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@mipmap/albums"
            android:contentDescription="@string/img_Card_Album_description"
            android:scaleType="fitXY"/>
    </androidx.cardview.widget.CardView>
...
